discussion/kv_engine/137161/137161_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39292: set_collections persist current manifest

set_collections only allows 'forward' progress after checking
that the new manifest is a successor of the current manifest,
however after warm-up we have to accept whatever we are given.

This commit updates set_collections so that for persistent buckets
the new manifest is first stored in the database directory and
then we update from that manifest on-success, now warm-up brings
the manifest back from storage and we can validate that further
updates are a valid successor.

Ephemeral buckets just update with no background task.

This patch stores using Manifest::toJSON and reloads JSON using
Manifest's existing construction with no integrity checking.

Change-Id: Ie548e31f56c4847ecf4c0c4ad866544f6bcd2a5c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-09-30 12:17:31.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-30 13:31:53.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4784/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4784/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4784/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30744/ : FAILURE

Failure of GoogleTest "CollectionsPersistent/CollectionsManifestUpdatePersistent.update_fail_persist/persistentMagma_value_only":

<pre>
[ RUN      ] CollectionsPersistent/CollectionsManifestUpdatePersistent.update_fail_persist/persistentMagma_value_only
unknown file: error: C++ exception with description "cb::io::rmrf: remove of file ep_engine_ep_unit_tests.db/test.429301\magma.1\wal\wal.1 under ep_engine_ep_unit_tests.db/test.429301 failed: The data is invalid." thrown in the test body.
[  FAILED  ] CollectionsPersistent/CollectionsManifestUpdatePersistent.update_fail_persist/persistentMagma_value_only, where GetParam() = ("persistentMagma", "value_only") (31 ms)
CollectionsPersistent/CollectionsManifestUpdatePersistent.update_fail_persist/persistentMagma_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30744/ )

Failure of a CTest test 138/394 Test #145: ep-engine_ep_unit_tests.CollectionsPersistent/CollectionsManifestUpdatePersistent ............................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30744/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6195/ : FAILURE

Failure of a CTest test [2020-09-30T12:29:18.267Z]   3/411 Test #173: ep-engine_ep_unit_tests.AllBucketTypes/ActiveDurabilityMonitorTest .......................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6195/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5151/ : FAILURE

Failure of a CTest test [2020-09-30T12:29:28.901Z]  58/408 Test #170: ep-engine_ep_unit_tests.AllBucketTypes/ActiveDurabilityMonitorTest .......................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5151/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6075/ : FAILURE

Timeout of a CTest test [2020-09-30T12:35:57.636Z] 102/398 Test #213: ep-engine_ep_unit_tests.EphemeralOrPersistent/STItemPagerTest ...............................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6075/ )

Failure of a CTest test [2020-09-30T12:32:19.293Z]   3/398 Test #171: ep-engine_ep_unit_tests.AllBucketTypes/ActiveDurabilityMonitorTest .......................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6075/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13967/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6301/ : FAILURE

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/build/kv_engine/ep_testsuite_dcp+0x4eab9b) in AnnotateRWLockAcquired  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6301/ )

Failure of a CTest test [2020-09-30T12:33:48.901Z]   4/389 Test #246: ep_testsuite_dcp.ephemeral.comp_passive ..................................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6301/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3311/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26581/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
